User Story CRUD: completed

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -96,6 +96,10 @@ body {
   border-bottom-color: #fff;
 }
 
+.wiki-text-left{
+    text-align: left;
+}
+
 @media (min-width: 48em) {
   .masthead-brand {
     float: left;
