--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,43 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <%= yield %>
+    <div class="site-wrapper">
+      <div class="site-wrapper-inner">
+        <div class="cover-container">
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">Blocipedia</h3>
+              <nav class="nav nav-masthead">
+                <% if user_signed_in? %>
+                  <%= current_user.name %> - <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "nav-link"  %>
+                <% else %>
+                  <%= link_to 'Sign In', new_user_session_path, method: :get, class: "nav-link"  %>
+                <% end %>
+              </nav>
+            </div>
+          </div>
+          <div class="inner">
+            <% if flash[:notice] %>
+              <div class="alert alert-success">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <%= flash[:notice] %>
+              </div>
+            <% elsif flash.now[:alert] %>
+              <div class="alert alert-danger">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <%= flash.now[:alert] %>
+              </div>
+            <% elsif flash[:alert] %>
+              <div class="alert alert-warning">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                <%= flash[:alert] %>
+              </div>
+            <% end %>
+          </div>
+          <%= yield %>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
