--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,22 @@
   <body>
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
+        <% if flash[:notice] %>
+          <div class="alert alert-success">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <%= flash[:notice] %>
+          </div>
+        <% elsif flash.now[:alert] %>
+          <div class="alert alert-danger">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <%= flash.now[:alert] %>
+          </div>
+        <% elsif flash[:alert] %>
+          <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <%= flash[:alert] %>
+          </div>
+        <% end %>
         <div class="cover-container">
           <div class="masthead clearfix">
             <div class="inner">
@@ -20,6 +36,7 @@
               <nav class="nav nav-masthead">
                 <% if user_signed_in? %>
                   <%= current_user.name %> - <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "nav-link"  %>
+                  <%= link_to 'Wikis', wikis_path, class: "nav-link" %>
                 <% else %>
                   <%= link_to 'Sign In', new_user_session_path, method: :get, class: "nav-link"  %>
                 <% end %>
@@ -27,27 +44,11 @@
             </div>
           </div>
           <div class="inner">
-            <% if flash[:notice] %>
-              <div class="alert alert-success">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
-                <%= flash[:notice] %>
-              </div>
-            <% elsif flash.now[:alert] %>
-              <div class="alert alert-danger">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
-                <%= flash.now[:alert] %>
-              </div>
-            <% elsif flash[:alert] %>
-              <div class="alert alert-warning">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
-                <%= flash[:alert] %>
-              </div>
-            <% end %>
+
           </div>
           <%= yield %>
         </div>
       </div>
     </div>
-
   </body>
 </html>
