--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,9 @@
               <h3 class="masthead-brand">Blocipedia</h3>
               <nav class="nav nav-masthead">
                 <% if user_signed_in? %>
-                  <%= current_user.name %> - <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "nav-link"  %>
+                  <%= link_to current_user.name, edit_user_registration_path, method: :get, class: "nav-link"  %>
+                  -
+                  <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "nav-link"  %>
                   <%= link_to 'Wikis', wikis_path, class: "nav-link" %>
                 <% else %>
                   <%= link_to 'Sign In', new_user_session_path, method: :get, class: "nav-link"  %>
