--- a/app/views/wikis/_form.html.erb
+++ b/app/views/wikis/_form.html.erb
@@ -18,6 +18,12 @@
     <%= f.label :body %>
     <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body" %>
   </div>
+  <% if current_user.admin? || current_user.premium? %>
+  <div class="form-group">
+    <%= f.label "Private Wiki" %> <br />
+    <%= f.check_box :private %> <br />
+  </div>
+  <% end %>
   <div class="form-group">
     <%= f.submit "Save", class: 'btn btn-success' %>
     <%= link_to 'Cancel', wikis_path, class: 'btn btn-success'  %>
